Enable find in page buttons based on search text rather than match results.

When you re-open the find bar and it's prepopulated with a previous
search, we don't execute a search until you press enter or
next/previous. Before this patch, next/previous was disabled when you
have prepopulated search text but no actual search.

BUG=627356

Review-Url: https://codereview.chromium.org/2143703002
Cr-Commit-Position: refs/heads/master@{#405205}

Former-commit-id: 4490a847784c16a5277604afdfe59b8dae66310d