chrome/browser/ui/views/find_bar_view.cc
@@ -594,7 +594,7 @@ void FindBarView::Find(const base::string16& search_text) {
 }
 
 void FindBarView::UpdateMatchCountAppearance(bool no_match) {
-  bool enable_buttons = !match_count_text_->text().empty() && !no_match;
+  bool enable_buttons = !find_text_->text().empty() && !no_match;
   find_previous_button_->SetEnabled(enable_buttons);
   find_next_button_->SetEnabled(enable_buttons);
 
